--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
-1. Add languagecontext to communicate between map components
-2. Connect buttons to api
+1. Connect buttons to api
+2. Style website
